--- a/tutorial/designpatterns/pom.xml
+++ b/tutorial/designpatterns/pom.xml
@@ -1,17 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.pabreja</groupId>
-  <artifactId>learn</artifactId>
+  <artifactId>designpatterns</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Learning Java</name>
+  <name>DesignPatterns</name>
   <description>This is the practice tutorials for design patterns.</description>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
   <parent>
       <groupId>in.pabreja</groupId>
-      <artifactId>root-build</artifactId>
+      <artifactId>tutorial</artifactId>
       <version>0.0.1-SNAPSHOT</version>
    </parent>
-   <modules>
-   <module>tutorial</module>
-   </modules>
- </project>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+</project>
