--- a/research/.project
+++ b/research/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>root-build</name>
+	<name>research</name>
 	<comment></comment>
 	<projects>
 	</projects>
