--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,99 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>in.pabreja</groupId>
-  <artifactId>learn</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Learning Java</name>
-  <description>This is the practice tutorials for design patterns.</description>
-  <packaging>pom</packaging>
-  <parent>
-      <groupId>in.pabreja</groupId>
-      <artifactId>root-build</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-   </parent>
-   <modules>
-   <module>tutorial</module>
-   </modules>
- </project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>in.pabreja</groupId>
+	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>root-build</artifactId>
+	<packaging>pom</packaging>
+	<name>Root Build</name>
+	<description>Java Learning complete package. The secret to coding. This is master branch.</description>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<modules>
+		<module>research</module>
+		<module>learn</module>
+	</modules>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<configuration>
+						<unzipCommand>/usr/bin/unzip -o > err.txt</unzipCommand>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>root.project.projects</groupId>
+				<artifactId>logging</artifactId>
+				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>root.project</groupId>
+				<artifactId>primary-source</artifactId>
+				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>root.project.servlets</groupId>
+				<artifactId>servlet</artifactId>
+				<version>1.0</version>
+				<type>war</type>
+			</dependency>
+			<dependency>
+				<groupId>root.project</groupId>
+				<artifactId>ejbs</artifactId>
+				<version>1.0</version>
+				<type>ejb</type>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>1.7.5</version>
+			</dependency>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.netflix.hystrix</groupId>
+				<artifactId>hystrix-core</artifactId>
+				<version>1.4.21</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<distributionManagement>
+		<site>
+			<id>site</id>
+			<name>project website</name>
+			<url>https://github.com/mandheer/learnjava</url>
+		</site>
+	</distributionManagement>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>PabrejaGitHub</id>
+			<name>Pabreja Open Source Development</name>
+			<email>info@pabreja.in</email>
+		</developer>
+	</developers>
+	<scm>
+		<url>git@github.com:mandheer/learnjava.git</url>
+	</scm>
+
+</project>
